update by thanh

--- a/SMS.Web/Views/BringIn/Approve.cshtml
+++ b/SMS.Web/Views/BringIn/Approve.cshtml
@@ -122,7 +122,7 @@
                 "lengthChange": false,
                 "ajax": {
                     "type": "POST",
-                    "url": "/BringIn/FetchBringInData",
+                    "url": "/BringIn/FetchBringInApproveData?name=",
                     "dataType": "json",
                     "contentType": 'application/json; charset=utf-8'
                 },
