--- a/SMS.Web/Views/BringOut/Edit.cshtml
+++ b/SMS.Web/Views/BringOut/Edit.cshtml
@@ -162,7 +162,7 @@
             <i class="fas fa-plus"></i>&nbsp; Thêm tài sản
         </label>
         <button id="register" class="btn-success btn btn-sm" type="submit" title="Đăng ký mang hàng vào" style="cursor: pointer">
-            <i class="fas fa-edit"></i>&nbsp; Cập nhật
+            <i class="fas fa-edit"></i>&nbsp; Đăng ký
         </button>
     </div>
 </div>
