--- a/SMS.Web/Views/Guard/ConfirmGuest.cshtml
+++ b/SMS.Web/Views/Guard/ConfirmGuest.cshtml
@@ -193,7 +193,7 @@
                             status: 1
                         },
                         success: (response) => {
-                            if (response.GuardStatusOut == 1) {
+                            if (response.GuardStatusIn == 1) {
                                 window.location.reload();
                             }
                             else {
