--- a/SMS.Web/Views/BringIn/FSTApproveDetail.cshtml
+++ b/SMS.Web/Views/BringIn/FSTApproveDetail.cshtml
@@ -158,7 +158,7 @@
                                 }
                                 else
                                 {
-                                    <i class="fas fa-times" style="color: red"></i>
+                                    <i class="fas fa-times"></i>
                                 }
                             }
                         </td>
@@ -201,7 +201,7 @@
                                 }
                                 else
                                 {
-                                    <i class="fas fa-times" style="color: red"></i>
+                                    <i class="fas fa-times"></i>
                                 }
                             }
                             else if (item.SMT_Status != null)
@@ -212,7 +212,7 @@
                                 }
                                 else
                                 {
-                                    <i class="fas fa-times" style="color: red"></i>
+                                    <i class="fas fa-times"></i>
                                 }
                             }
                         </td>
