--- a/SMS.Web/Views/BringOut/ApproveDetail.cshtml
+++ b/SMS.Web/Views/BringOut/ApproveDetail.cshtml
@@ -91,7 +91,7 @@
                     <th>Đơn vị</th>
                     <th>Loại hàng hóa</th>
                     <th colspan="2">Thời gian đem trở ra</th>
-                    <th colspan="4">Trưởng phòng phê duyệt</th>
+                    <th colspan="2">Trưởng phòng phê duyệt</th>
                     <th colspan="4">ITT/SMT phê duyệt</th>
                     <th colspan="4">FST phê duyệt</th>
                 </tr>
@@ -99,155 +99,151 @@
             <tbody>
                 @foreach (var item in Model.Bring_Out_Items)
                 {
-                <tr>
-                    <td>
-                        <input type="hidden" class="itemId" value="@item.ID" />
-                        @item.Item
-                    </td>
-                    <td>@item.Serial</td>
-                    <td>@item.Quantity</td>
-                    <td>@item.Unit</td>
-                    <td>
-                        @if (item.AssetType == 0)
-                        {
-                            @:Hàng thường
-                        }
-                        else if (item.AssetType == 1)
-                        {
-                            @:Hàng IT
-                        }
-                        else
-                        {
-                            @:Hàng độc hại
-                        }
-                    </td>
-                    <td>
-                        @if (item.IsReturn.Value)
-                        {
-                            <i class="fas fa-check-square" title="Có đem trở ra"></i>
-                        }
-                        else
-                        {
-                            <i class="fas fa-times" style="color: red" title="Không đem trở ra"></i>
-                        }
-                    </td>
-                    <td>
-                        @if (item.IsReturn.Value)
-                        {
-                            <span>@item.ReturnDate | @item.ReturnTime</span>
-                        }
-                    </td>
-                    @if (string.IsNullOrEmpty(item.ApprovedBy))
-                    {
-                        <td>@item.ApprovedBy</td>
-                        <td>@item.ApprovedDate</td>
+                    <tr>
                         <td>
-                            <a class="btn btn-primary btn-standard btn-admin-approve-LE approve" title="Phê duyệt"><i class="fas fa-check" style="margin-left: -4px"></i></a>
-                            <a class="btn btn-danger btn-standard btn-admin-reject-LE unapprove" title="Không phê duyệt"><i class="fas fa-times" style="margin-left: -2.5px; color: white"></i></a>
+                            <input type="hidden" class="itemId" value="@item.ID" />
+                            @item.Item
                         </td>
-                        <td><input class="remark remark-1 col-12" type="text" placeholder="Ghi chú..." /></td>
-                    }
-                    else
-                    {
-                        <td>@item.ApprovedBy</td>
-                        <td>@item.ApprovedDate</td>
-                        if (item.ApprovedStatus == 0)
+                        <td>@item.Serial</td>
+                        <td>@item.Quantity</td>
+                        <td>@item.Unit</td>
+                        <td>
+                            @if (item.AssetType == 0)
+                            {
+                                @:Hàng thường
+                            }
+                            else if (item.AssetType == 1)
+                            {
+                                @:Hàng IT
+                            }
+                            else
+                            {
+                                @:Hàng độc hại
+                            }
+                        </td>
+                        <td title="Có đem trở ra">
+                            @if (item.IsReturn.Value)
+                            {
+                                <i class="fas fa-check-square" title="Có đem trở ra"></i>
+                            }
+                            else
+                            {
+                                <i class="fas fa-times" style="color: red" title="Không đem trở ra"></i>
+                            }
+                        </td>
+                        <td>
+                            @if (item.IsReturn.Value)
+                            {
+                                <span>@item.ReturnDate | @item.ReturnTime</span>
+                            }
+                        </td>
+                        @if (string.IsNullOrEmpty(item.ApprovedBy))
                         {
-                            <td><i class="fas fa-times" style="color: red" title="Không phê duyệt"></i></td>
+                            <td>
+                                <a class="btn btn-primary btn-standard btn-admin-approve-LE approve" title="Phê duyệt"><i class="fas fa-check" style="margin-left: -4px"></i></a>
+                                <a class="btn btn-danger btn-standard btn-admin-reject-LE unapprove" title="Không phê duyệt"><i class="fas fa-times" style="margin-left: -2.5px"></i></a>
+                            </td>
+                            <td><input class="remark remark-1 col-12" type="text" placeholder="Ghi chú..."/></td>
                         }
                         else
                         {
-                            <td><i class="fas fa-check-square"></i></td>
-                        }
-                        <td>@item.ApproverRemark</td>
-                    }
-                    <td>
-                        @if (!string.IsNullOrEmpty(item.ITT))
-                        {
-                            @:@item.ITT
-                        }
-                        else if (!string.IsNullOrEmpty(item.SMT))
-                        {
-                            @:@item.SMT
-                        }
-                    </td>
-                    <td>
-                        @if (item.ITT_Date != null)
-                        {
-                            @:@item.ITT_Date
-                        }
-                        else if (item.SMT_Date != null)
-                        {
-                            @:@item.SMT_Date
-                        }
-                    </td>
-                    <td>
-                        @if (!string.IsNullOrEmpty(item.ITT_Remark))
-                        {
-                            @:@item.ITT_Remark
-                        }
-                        else if (!string.IsNullOrEmpty(item.SMT_Remark))
-                        {
-                            @:@item.SMT_Remark
-                        }
-                    </td>
-                    <td>
-                        @if (item.ITT_Status != null)
-                        {
-                            if (item.ITT_Status == 1)
+                            if (item.ApprovedStatus == 0)
                             {
-                                <i class="fas fa-check-square"></i>
+                                <td><i class="fas fa-times" style="color: red" title="Không phê duyệt"></i></td>
                             }
                             else
                             {
-                                <i class="fas fa-times"></i>
+                                <td><i class="fas fa-check-square"></i></td>
                             }
+                            <td>@item.ApproverRemark</td>
                         }
-                        else if (item.SMT_Status != null)
-                        {
-                            if (item.SMT_Status == 1)
+                        <td>
+                            @if (!string.IsNullOrEmpty(item.ITT))
                             {
-                                <i class="fas fa-check-square"></i>
+                                @:@item.ITT
                             }
-                            else
+                            else if (!string.IsNullOrEmpty(item.SMT))
                             {
-                                <i class="fas fa-times"></i>
+                                @:@item.SMT
                             }
-                        }
-                    </td>
+                        </td>
+                        <td>
+                            @if (item.ITT_Date != null)
+                            {
+                                @:@item.ITT_Date
+                            }
+                            else if (item.SMT_Date != null)
+                            {
+                                @:@item.SMT_Date
+                            }
+                        </td>
+                        <td>
+                            @if (!string.IsNullOrEmpty(item.ITT_Remark))
+                            {
+                                @:@item.ITT_Remark
+                            }
+                            else if (!string.IsNullOrEmpty(item.SMT_Remark))
+                            {
+                                @:@item.SMT_Remark
+                            }
+                        </td>
+                        <td>
+                            @if (item.ITT_Status != null)
+                            {
+                                if (item.ITT_Status == 1)
+                                {
+                                    <i class="fas fa-check-square"></i>
+                                }
+                                else
+                                {
+                                    <i class="fas fa-times"></i>
+                                }
+                            }
+                            else if (item.SMT_Status != null)
+                            {
+                                if (item.SMT_Status == 1)
+                                {
+                                    <i class="fas fa-check-square"></i>
+                                }
+                                else
+                                {
+                                    <i class="fas fa-times"></i>
+                                }
+                            }
+                        </td>
 
-                    <td>
-                        @if (!string.IsNullOrEmpty(item.FST))
-                        {
-                            @:@item.FST
-                        }
-                    </td>
-                    <td>
-                        @if (item.FST_Date != null)
-                        {
-                            @:@item.FST_Date
-                        }
-                    </td>
-                    <td>
-                        @if (!string.IsNullOrEmpty(item.FST_Remark))
-                        {
-                            @:@item.FST_Remark
-                        }
-                    </td>
-                    <td>
-                        @if (item.FST_Status != null)
-                        {
-                            if (item.FST_Status == 1)
+                        <td>
+                            @if (!string.IsNullOrEmpty(item.FST))
                             {
-                                <i class="fas fa-check-square"></i>
+                                @:@item.FST
                             }
-                            else
+                        </td>
+                        <td>
+                            @if (item.FST_Date != null)
                             {
-                                <i class="fas fa-times"></i>
+                                @:@item.FST_Date
                             }
-                        }
-                    </td>
-                </tr>
+                        </td>
+                        <td>
+                            @if (!string.IsNullOrEmpty(item.FST_Remark))
+                            {
+                                @:@item.FST_Remark
+                            }
+                        </td>
+                        <td>
+                            @if (item.FST_Status != null)
+                            {
+                                if (item.FST_Status == 1)
+                                {
+                                    <i class="fas fa-check-square"></i>
+                                }
+                                else
+                                {
+                                    <i class="fas fa-times"></i>
+                                }
+                            }
+                        </td>
+                    </tr>
                 }
             </tbody>
         </table>
