--- a/SMS.Web/Views/BringOut/ITTApproveDetail.cshtml
+++ b/SMS.Web/Views/BringOut/ITTApproveDetail.cshtml
@@ -95,6 +95,7 @@
                     <th>Đơn vị</th>
                     <th>Loại hàng hóa</th>
                     <th colspan="2">Thời gian đem trở ra</th>
+                    <th colspan="2">Người đăng ký</th>
                     <th colspan="4">Phê duyệt</th>
                     <th colspan="2">ITT/SMT phê duyệt</th>
                     <th colspan="4">FST phê duyệt</th>
@@ -136,6 +137,8 @@
                             }
                         </td>
                         <td>@item.ReturnDate</td>
+                        <td>@item.ApprovedBy</td>
+                        <td>@item.ApprovedDate</td>
                         <td>
                             @if (!string.IsNullOrEmpty(item.ApprovedBy))
                             {
