--- a/SMS.Web/Views/GoOut/Approve.cshtml
+++ b/SMS.Web/Views/GoOut/Approve.cshtml
@@ -49,7 +49,7 @@
             <div class="col-2 input-group input-group-sm">
                 <label class="no-margin-bottom" style="padding-top: 5px">Ca làm việc</label>
                 &nbsp;
-                <select class="form-control from-date">
+                <select id="shift" class="form-control from-date">
                     <option value="0">Hành chính</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
